# elephant

./: .zenodo.json  codemeta.json  pyproject.toml  setup.py
.github/actions/restore-elephant-data/: action.yml
.github/workflows/: CI.yml  build_wheels.yml  canary_ci.yml
doc/: conf.py  release_notes.rst
elephant/: VERSION  datasets.py
elephant/causality/: granger.py
requirements/: environment-docs.yml  environment-tests.yml  environment.yml  requirements-tests.txt  requirements-tutorials.txt
